[project]
name = "backup-cli-program"
version = "0.1.1"
description = "Files and Folders backup program."
authors = [{ name = "Ahda Akmalul Ilmi", email = "ahda043@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer (>=0.17.4,<0.18.0)", "blake3 (>=1.0.6,<2.0.0)", "zstandard (>=0.25.0,<0.26.0)"]


[tool.poetry.dependencies]
pyinstaller = [{ version = "^6.16.0", python = ">=3.13,<3.15" }]


[tool.poetry-pyinstaller-plugin.scripts]
dryass = { source = "./main.py", type = "onefile", bundle = false }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
